--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tree-directory",
+  "name": "kigi",
   "version": "1.0.0",
   "description": "Create a json with directory data or create a tree in string",
   "main": "index.js",
@@ -9,7 +9,8 @@
   },
   "keywords": [
     "directory",
-    "tree"
+    "tree",
+    "folder"
   ],
   "author": "Misael Zurdo",
   "license": "MIT",
@@ -19,5 +20,16 @@
   },
   "devDependencies": {
     "standard": "^12.0.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MisaZ10/tree.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MisaZ10/tree/issues"
+  },
+  "homepage": "https://github.com/MisaZ10/tree#readme"
 }
