--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint-fix": "standard --fix",
-    "lint": "standard"
+    "lint": "standard",
+    "test": "ava tests/ --verbose"
   },
   "keywords": [
     "directory",
@@ -19,6 +20,9 @@
     "defaults": "^1.0.3"
   },
   "devDependencies": {
+    "ava": "^0.25.0",
+    "proxyquire": "^2.1.0",
+    "sinon": "^6.1.5",
     "standard": "^12.0.0"
   },
   "directories": {
