change readme and add icon

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "keywords": [
     "directory",
     "tree",
-    "folder"
+    "folder",
+    "json"
   ],
   "author": "Misael Zurdo",
   "license": "MIT",
