--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.0",
   "description": "Create a json with directory data or create a tree in string",
   "main": "index.js",
+  "bin": {
+    "kigi": "index.js"
+  },
   "scripts": {
     "lint-fix": "standard --fix",
     "lint": "standard",
